# arxiv-mcp-server

./: .gitignore  LICENSE  README.md  decision_log.md  manifest.json  pyproject.toml  server.json
.github/workflows/: build-mcpb.yml  lint.yml  publish.yml  tests.yml
scripts/: build-mcpb.sh
src/arxiv_mcp_server/: config.py  paper_store.py  server.py
src/arxiv_mcp_server/resources/: papers.py
src/arxiv_mcp_server/tools/: alerts.py  citation_graph.py  content.py  download.py  get_abstract.py  list_papers.py  read_paper.py  search.py  semantic_search.py
tests/: conftest.py  test_config.py  test_mcp_tool_error_semantics.py  test_tool_schemas.py  test_transport.py
tests/resources/: test_papers.py
tests/tools/: test_alerts.py  test_download.py  test_read_paper.py  test_search.py  test_semantic_search.py  test_storage_layout.py
